vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Let's build a VPC environment using AWS CloudFormation!

Parameters:
  Project:
    Type: String
    Default: sampleVPC
    Description: Enter the project name.

  Env:
    Type: String
    Default: development
    AllowedValues:
      - production
      - development
      - staging
    Description: Enter the environment.

Outputs:
  VpcId:
    Description: The VPC's ID.
    Value: !Ref VPC
    Export:
      Name: !Join ["-", [!Ref Project, !Ref Env, VPCID]]

  VpcCiderBlock:
    Description: This is the segmentation of the NW.
    Value: !GetAtt VPC.CidrBlock
    Export:
      Name: !Join ["-", [!Ref Project, !Ref Env, CiderBlock]]

  IGW:
    Description: The IGW's ID
    Value: !Ref InternetGateway
    Export:
      Name: !Join ["-", [!Ref Project, !Ref Env, IGWID]]

Resources:
#=============================================
# VPC
#=============================================
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: !Join ["-", [!Ref Project, !Ref Env]]


#=============================================
# サブネット AZ-a
#=============================================
  Subnet01a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.0.0/20
      Tags:
      - Key: Name
        Value: public-subnet-01a

  Subnet02a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.16.0/20
      Tags:
      - Key: Name
        Value: private-subnet-02a

  Subnet03a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.32.0/20
      Tags:
      - Key: Name
        Value: private-subnet-03a

#=============================================
# サブネット AZ-c
#=============================================
  Subnet01c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.48.0/20
      Tags:
      - Key: Name
        Value: public-subnet-01c

  Subnet02c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.64.0/20
      Tags:
      - Key: Name
        Value: private-subnet-02c

  Subnet03c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.80.0/20
      Tags:
      - Key: Name
        Value: private-subnet-03c

#=============================================
# サブネット AZ-d
#=============================================
  Subnet01d:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1d
      CidrBlock: 10.0.96.0/20
      Tags:
      - Key: Name
        Value: public-subnet-01d

  Subnet02d:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1d
      CidrBlock: 10.0.112.0/20
      Tags:
      - Key: Name
        Value: private-subnet-02d

  Subnet03d:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-northeast-1d
      CidrBlock: 10.0.128.0/20
      Tags:
      - Key: Name
        Value: private-subnet-03d

#=============================================
# インターネットゲートウェイ
#=============================================
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join ["-", [!Ref Project, !Ref Env]]

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

#=============================================
# NATゲートウェイ AZ-a
#=============================================
  NatGWa:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref Subnet01a
      AllocationId: !GetAtt EIPNatGWa.AllocationId
      Tags:
      - Key: Name
        Value: !Join ["-", [!Ref Project, !Ref Env, a]]

  EIPNatGWa:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: sampleEIPNatGWa

#=============================================
# NATゲートウェイ AZ-c
#=============================================
  NatGWc:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref Subnet01c
      AllocationId: !GetAtt EIPNatGWc.AllocationId
      Tags:
      - Key: Name
        Value: !Join ["-", [!Ref Project, !Ref Env, c]]

  EIPNatGWc:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: sampleEIPNatGWc

#=============================================
# NATゲートウェイ AZ-d
#=============================================f
  NatGWd:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref Subnet01d
      AllocationId: !GetAtt EIPNatGWd.AllocationId
      Tags:
      - Key: Name
        Value: !Join ["-", [!Ref Project, !Ref Env, d]]

  EIPNatGWd:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: sampleEIPNatGWd

#=============================================
# ルートテーブル
#=============================================
# パブリックサブネット用
# 各AZ共通のルートテーブル
  RouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: RouteTable01

  Route01:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable01

  RouteTableAssociation01a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable01
      SubnetId: !Ref Subnet01a

  RouteTableAssociation01c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable01
      SubnetId: !Ref Subnet01c

  RouteTableAssociation01d:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable01
      SubnetId: !Ref Subnet01d

# プライベートサブネット用
# AZ-a
  RouteTable02a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: RouteTable02a

  Route02a:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGWa
      RouteTableId: !Ref RouteTable02a

  RouteTableAssociation02a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable02a
      SubnetId: !Ref Subnet02a

# AZ-c
  RouteTable02c:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: RouteTable02c

  Route02c:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGWc
      RouteTableId: !Ref RouteTable02c

  RouteTableAssociation02c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable02c
      SubnetId: !Ref Subnet02c

# AZ-d
  RouteTable02d:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: RouteTable02d

  Route02d:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGWd
      RouteTableId: !Ref RouteTable02d

  RouteTableAssociation02d:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable02d
      SubnetId: !Ref Subnet02d

# プライベートサブネット用
# 各AZ共通のルートテーブル
  RouteTable03:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: RouteTable03

  RouteTableAssociation03a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable03
      SubnetId: !Ref Subnet03a

  RouteTableAssociation03c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable03
      SubnetId: !Ref Subnet03c

  RouteTableAssociation03d:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable03
      SubnetId: !Ref Subnet03d
